--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,80 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.spacer {
+  flex: 1 1 auto;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.text-align {
+  &-right {
+    text-align: right;
+  }
+  &-center {
+    text-align: center;
+  }
+}
+
+.d-flex {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  &-center {
+    justify-content: center;
+  }
+
+  &-baseline {
+    align-items: baseline;
+  }
+}
+
+.m-0 {
+  margin: 0 !important;
+}
+
+.mr-16 {
+  margin-right: 16px !important;
+}
+
+.ml {
+  &-16 {
+    margin-left: 16px !important;
+  }
+
+  &-8 {
+    margin-left: 8px !important;
+  }
+}
+
+.mt-16 {
+  margin-top: 16px !important;
+}
+
+.mb-16 {
+  margin-bottom: 16px !important;
+}
+
+button {
+  box-shadow: none !important;
+}
+
+.mat-card {
+  margin: 0 !important;
+}
+
+.mat-form-field-suffix {
+  display: flex !important;
+  align-items: baseline !important;
+}
+
+.clip {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 80vw;
+}
