--- a/src/app/components/article-create/article-create.component.html
+++ b/src/app/components/article-create/article-create.component.html
@@ -7,7 +7,7 @@
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="mr-16" style="width: 100%">
-    <mat-label>Полное название</mat-label>
+    <mat-label>Текст</mat-label>
     <textarea matInput required formControlName="text"></textarea>
   </mat-form-field>
 
