--- a/src/app/components/document-list/document-list.component.html
+++ b/src/app/components/document-list/document-list.component.html
@@ -16,35 +16,53 @@
   </mat-form-field>
 </div>
 
-<div class="d-flex d-flex-center mt-16">
-  <div class="d-flex">
-    <div class="d-flex d-flex-baseline" style="width: 100%">
-      <h2 class="m-0">УК РФ</h2>
-      <h5 class="m-0" title="Имя">
-        &nbsp;&nbsp;Уголовный кодекс Российской Федерации
-      </h5>
+<ng-container *ngIf="documents; else loader">
+  <virtual-scroller #scroll [items]="documents" [parentScroll]="scroll.window">
+    <div #container>
+      <div
+        class="d-flex d-flex-center mt-16"
+        *ngFor="let document of scroll.viewPortItems"
+      >
+        <div class="d-flex">
+          <div class="d-flex d-flex-baseline" style="width: 100%">
+            <h2 class="m-0">{{ document.shortTitle }}</h2>
+            <h5 class="m-0">&nbsp;&nbsp;{{ document.fullTitle }}</h5>
+          </div>
+          <div class="d-flex d-flex-baseline">
+            <h5 class="m-0">
+              Статья дела? <b>{{ document.isCaseArticle ? "Да" : "Нет" }}</b>
+            </h5>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <h5 class="m-0">
+              Экспертиза? <b>{{ document.isExpertise ? "Да" : "Нет" }}</b>
+            </h5>
+          </div>
+        </div>
+        <div class="spacer"></div>
+        <div class="d-flex">
+          <button mat-icon-button>
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button
+            mat-icon-button
+            [routerLink]="['/document/view/', document.documentId]"
+          >
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button
+            mat-mini-fab
+            color="accent"
+            class="ml-8"
+            [routerLink]="['/document/edit/', document.documentId]"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+        </div>
+      </div>
     </div>
-    <div class="d-flex d-flex-baseline">
-      <h5 class="m-0">Статья дела? <b>Да</b></h5>
-      &nbsp;&nbsp;&nbsp;&nbsp;
-      <h5 class="m-0">Экспертиза? <b>Нет</b></h5>
-    </div>
-  </div>
-  <div class="spacer"></div>
-  <div class="d-flex">
-    <button mat-icon-button>
-      <mat-icon>delete</mat-icon>
-    </button>
-    <button mat-icon-button routerLink="/document/view/123">
-      <mat-icon>visibility</mat-icon>
-    </button>
-    <button
-      mat-mini-fab
-      color="accent"
-      class="ml-8"
-      routerLink="/document/edit/123"
-    >
-      <mat-icon>edit</mat-icon>
-    </button>
-  </div>
-</div>
+  </virtual-scroller>
+</ng-container>
+
+<ng-template #loader>
+  <mat-spinner style="margin: 5rem auto"></mat-spinner>
+</ng-template>
