--- a/src/app/components/person-create/person-create.component.html
+++ b/src/app/components/person-create/person-create.component.html
@@ -11,7 +11,7 @@
 
   <mat-form-field appearance="outline" class="mr-16">
     <mat-label>Короткое название</mat-label>
-    <input matInput formControlName="shortName" />
+    <input matInput formControlName="shortName" emptyToNull />
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="mr-16">
@@ -21,12 +21,12 @@
 
   <mat-form-field appearance="outline" class="mr-16" style="width: 100%">
     <mat-label>Адрес</mat-label>
-    <input matInput formControlName="address" />
+    <input matInput formControlName="address" emptyToNull />
   </mat-form-field>
 
   <mat-form-field appearance="outline" class="mr-16">
     <mat-label>ИНН</mat-label>
-    <input matInput formControlName="tin" />
+    <input matInput formControlName="tin" emptyToNull />
   </mat-form-field>
 
   <mat-form-field
@@ -44,7 +44,7 @@
     *ngIf="form.controls.typePerson.value === 0"
   >
     <mat-label>Дата рождения</mat-label>
-    <input matInput formControlName="dateBirth" type="date" />
+    <input matInput formControlName="dateBirth" type="date" emptyToNull />
   </mat-form-field>
 
   <div>
@@ -53,6 +53,7 @@
       color="primary"
       [disabled]="form.invalid"
       class="mt-16"
+      (click)="create()"
     >
       Добавить
     </button>
