--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -16,28 +16,41 @@
   </mat-form-field>
 </div>
 
-<div class="d-flex d-flex-center mt-16">
-  <div class="d-flex">
-    <div class="d-flex d-flex-baseline" style="width: 100%">
-      <h2 class="m-0">Сафонов Денис Александрович</h2>
-      <h5 class="m-0" title="Имя">&nbsp;&nbsp;</h5>
+<ng-container *ngIf="persons !== undefined; else loader">
+  <virtual-scroller #scroll [items]="persons" [parentScroll]="scroll.window">
+    <div #container>
+      <div
+        class="d-flex d-flex-center mt-16"
+        *ngFor="let person of scroll.viewPortItems"
+      >
+        <div class="d-flex">
+          <div class="d-flex d-flex-baseline" style="width: 100%">
+            <h2 class="m-0">{{ person.fullName }}</h2>
+            <h5 class="m-0" title="Имя">&nbsp;&nbsp;</h5>
+          </div>
+          <div class="d-flex d-flex-baseline">
+            <h5 class="m-0">{{ person.isLegal ? "Юр" : "Физ" }}. лицо</h5>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <h5 class="m-0" *ngIf="person.tin">ИНН: {{ person.tin }}</h5>
+          </div>
+        </div>
+        <div class="spacer"></div>
+        <div class="d-flex">
+          <button mat-icon-button>
+            <mat-icon>delete</mat-icon>
+          </button>
+          <button mat-icon-button>
+            <mat-icon>visibility</mat-icon>
+          </button>
+          <button mat-mini-fab color="accent" class="ml-8">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </div>
+      </div>
     </div>
-    <div class="d-flex d-flex-baseline">
-      <h5 class="m-0">Физ. лицо</h5>
-      &nbsp;&nbsp;&nbsp;&nbsp;
-      <h5 class="m-0">ИНН: 1234643645645</h5>
-    </div>
-  </div>
-  <div class="spacer"></div>
-  <div class="d-flex">
-    <button mat-icon-button>
-      <mat-icon>delete</mat-icon>
-    </button>
-    <button mat-icon-button>
-      <mat-icon>visibility</mat-icon>
-    </button>
-    <button mat-mini-fab color="accent" class="ml-8">
-      <mat-icon>edit</mat-icon>
-    </button>
-  </div>
-</div>
+  </virtual-scroller>
+</ng-container>
+
+<ng-template #loader>
+  <mat-spinner style="margin: 5rem auto"></mat-spinner>
+</ng-template>
