--- a/src/app/components/person-list/person-list.component.html
+++ b/src/app/components/person-list/person-list.component.html
@@ -36,13 +36,21 @@
         </div>
         <div class="spacer"></div>
         <div class="d-flex">
-          <button mat-icon-button>
+          <button mat-icon-button (click)="deletePerson(person.personId)">
             <mat-icon>delete</mat-icon>
           </button>
-          <button mat-icon-button>
+          <button
+            mat-icon-button
+            [routerLink]="['/person/view/', person.personId]"
+          >
             <mat-icon>visibility</mat-icon>
           </button>
-          <button mat-mini-fab color="accent" class="ml-8">
+          <button
+            mat-mini-fab
+            color="accent"
+            class="ml-8"
+            [routerLink]="['/person/edit/', person.personId]"
+          >
             <mat-icon>edit</mat-icon>
           </button>
         </div>
