--- a/src/app/components/document-create/document-create.component.html
+++ b/src/app/components/document-create/document-create.component.html
@@ -25,6 +25,7 @@
       color="primary"
       [disabled]="form.invalid"
       class="mt-16"
+      (click)="create()"
     >
       Добавить
     </button>
