--- a/src/app/components/document-list/document-list.component.html
+++ b/src/app/components/document-list/document-list.component.html
@@ -40,7 +40,7 @@
         </div>
         <div class="spacer"></div>
         <div class="d-flex">
-          <button mat-icon-button>
+          <button mat-icon-button (click)="delete(document.documentId)">
             <mat-icon>delete</mat-icon>
           </button>
           <button
