--- a/src/app/components/court-cases-list/court-cases-list.component.html
+++ b/src/app/components/court-cases-list/court-cases-list.component.html
@@ -51,7 +51,7 @@
         </div>
         <div class="spacer"></div>
         <div class="d-flex">
-          <button mat-icon-button>
+          <button mat-icon-button (click)="delete(courtCase.courtCaseId)">
             <mat-icon>delete</mat-icon>
           </button>
           <button
